feat(ci): add Jenkins pipeline & auto-deployment on push to main
- Add Jenkinsfile for automated testing and deployment to https://hms.trikaar.tech
- Add scripts/deploy-prod.sh for automated container build and restart
- Update .github/workflows/deploy.yml
- Include latest production HMS backend and frontend enhancements